Creating a simple Two-way Binding (updating a view and model at the same time)

--- a/APM-Start/src/app/products/product-list.html
+++ b/APM-Start/src/app/products/product-list.html
@@ -1,3 +1,14 @@
+<div>
+    <span>Filter by: 
+        <input type="text" 
+                [(ngModel)]='filterText' />
+    </span>
+</div>
+<div>
+    <br />
+    <span>View: {{filterText}}</span>
+</div>
+<hr />
 <table border="1" cellpadding="10" cellspacing="10">
     <tr>
         <th>
