Removing abstract method at IProduct. Adding a simple hook (OnInit) and implementing a custom Pipe

--- a/APM-Start/src/app/products/product-list.html
+++ b/APM-Start/src/app/products/product-list.html
@@ -38,7 +38,7 @@
             {{product.productName}}
         </td>
         <td>
-            {{product.productCode}}
+            {{product.productCode | convertToSpaces:'-'}}
         </td>
     </tr>
 </table>
